Added logo back

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <!-- Strings for activity_main.xml -->
     <string name="image_description">MedManage app logo</string>
-    <string name="welcome_text">Welcome to MedManage</string>
+    <string name="welcome_text">Welcome to MedicManage</string>
     <string name="login_button_text">LOGIN</string>
     <string name="new_user_prompt">New user? Sign up below</string>
     <string name="signup_button_text">SIGN UP</string>
