--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,6 +20,21 @@
     <string name ="foodReq">Food Requirements</string>
 
 
+    <string name = "appname">Medic_Manage</string>
+    <string name = "hello_administrator">"Hello Administrator👋"</string>
+    <string name = "medication">Medications</string>
+    <string name = "add">Add</string>
+    <string name = "update">Update</string>
+    <string name = "delete">Delete</string>
+    <string name = "confirm">Are you sure you want to add this medication?</string>
+    <string name = "changes">Are you happy with your changes?</string>
+    <string name = "deletemed">Are you sure you want to delete this medication?</string>
+
+    <string name = "cancel">Cancel</string>
+    <string name = "yes">Yes</string>
+
+
+
 
 
 </resources>
