--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="welcome_text">Welcome to MedicManage</string>
     <string name="login_button_text">LOGIN</string>
     <string name="new_user_prompt">New user? Sign up below</string>
-    <string name="signup_button_text">SIGN UP</string>
+    <string name="signup_button_text">Sign Up</string>
 
 
     <!-- Strings for dialogue_signup.xml -->
@@ -20,7 +20,7 @@
     <string name ="foodReq">Food Requirements</string>
 
 
-    <string name = "appname">Medic_Manage</string>
+    <string name = "appname">MedicManage</string>
     <string name = "hello_administrator">"Hello Administrator👋"</string>
     <string name = "medication">Medications</string>
     <string name = "add">Add</string>
@@ -32,6 +32,8 @@
 
     <string name = "cancel">Cancel</string>
     <string name = "yes">Yes</string>
+    <string name = "profiledetails">Profile Details</string>
+
 
 
 
