Generating food list, will add removed files when working with them

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,13 +11,26 @@
 
 
     <!-- Strings for dialogue_signup.xml -->
+    <string name ="signup">Sign Up </string>
+    <string name ="profile_details">Profile Details</string>
     <string name ="user_type">User Type (Student/Nurse)</string>
     <string name ="id_num">ID Number</string>
-    <string name ="first_name">First Name</string>
+    <string name ="first_name"> Name</string>
     <string name ="last_name">Surname</string>
     <string name ="username">Username</string>
-    <string name ="medicalReq">Medical Requirements</string>
-    <string name ="foodReq">Food Requirements</string>
+    <string name="Password">Password</string>
+    <string name ="medicationReq">Medication Requirement</string>
+    <string name ="foodReq">Food Requirement</string>
+    <string name ="studentno">Student No</string>
+
+    <string name="logo">logo</string>
+    <string name="student">Student</string>
+    <string name="nurse">Nurse</string>
+    <string name="remember_me">Remember me </string>
+    <string name="forgot_password">Forgot Password</string>
+    <string name="new_to_medicmanage">New to Medic Manage?</string>
+    <string name="CONFIRM">Confirm</string>
+    <string name="Cancel">Cancel</string>
 
 
     <string name = "appname">MedicManage</string>
@@ -30,13 +43,29 @@
     <string name = "changes">Are you happy with your changes?</string>
     <string name = "deletemed">Are you sure you want to delete this medication?</string>
 
-    <string name = "cancel">Cancel</string>
+
+
     <string name = "yes">Yes</string>
-    <string name = "profiledetails">Profile Details</string>
+    <string name = "no">No</string>
 
-
-
-
+    //Food List
+    <string name="loading_food_list">Loading food list...</string>
+    <string name="failure_to_load_food_list"> Failed to Load food list</string>
+    <string name="available_food">Available Food</string>
+    <string name="select_item">Select an item to view details</string>
+    <string name="selected_food_details">Selected Food Details</string>
+    <string name="food_name">Name: </string>
+    <string name="food_type">Type: </string>
+    <string name = "food">Food</string>
+    <string name="available_quantity">Available Quantity</string>
+    <string name="edit">edit</string>
+    <string name="booklogo">Book Logo</string>
+    <string name="quantity_edit">Editing Quantity for</string>
+    <string name="decrease">-\n</string>
+    <string name="save_changes">Save Changes\n</string>
+    <string name="increment">+</string>
+    <string name="view_foodlist">View Food List\n</string>
+    <string name="log_out">Log Out\n</string>
 
 
 </resources>
