--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,7 @@
     <string name="app_name">MedManage</string>
 
 
-    <!-- Strings for activity_main.xml -->
+    //strings to welcome users to app
     <string name="image_description">MedManage app logo</string>
     <string name="welcome_text">Welcome to MedicManage</string>
     <string name="login_button_text">LOGIN</string>
@@ -10,7 +10,7 @@
     <string name="signup_button_text">Sign Up</string>
 
 
-    <!-- Strings for dialogue_signup.xml -->
+    //strings for signup
     <string name ="signup">Sign Up </string>
     <string name ="profile_details">Profile Details</string>
     <string name ="user_type">User Type (Student/Nurse)</string>
@@ -24,6 +24,7 @@
     <string name ="studentno">Student No</string>
     <string name="staff_no">staff_no</string>
 
+    //strings for general use
     <string name="logo">logo</string>
     <string name="student">Student</string>
     <string name="nurse">Nurse</string>
@@ -33,18 +34,16 @@
     <string name="CONFIRM">Confirm</string>
     <string name="Cancel">Cancel</string>
 
-
-    <string name = "appname">MedicManage</string>
+    //Strings needed for basic communication with user
+    <string name = "application_name">MedicManage</string>
     <string name = "hello_administrator">"Hello Administrator👋"</string>
     <string name = "medication">Medications</string>
     <string name = "add">Add</string>
     <string name = "update">Update</string>
     <string name = "delete">Delete</string>
-    <string name = "confirm">Are you sure you want to add this medication?</string>
+    <string name = "confirm_Message">Are you sure you want to add this medication?</string>
     <string name = "changes">Are you happy with your changes?</string>
-    <string name = "deletemed">Are you sure you want to delete this medication?</string>
-
-
+    <string name = "delete_Message">Are you sure you want to delete this medication?</string>
 
     <string name = "yes">Yes</string>
     <string name = "no">No</string>
@@ -80,5 +79,11 @@
     <string name="password">Password</string>
     <string name="sign_in">Sign In</string>
 
+    //medications specific phrases
+    <string name="med_brand">Brand</string>
+    <string name ="med_dose">Dosage</string>
+    <string name = "med_qoh">Quantity on Hand</string>
+    <string name = "medications">Medications</string>
+    <string name = "selection">Select Medication</string>
 
 </resources>
