--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,28 +1,27 @@
 <resources>
     <string name="app_name">MedManage</string>
-
-
     //strings to welcome users to app
     <string name="image_description">MedManage app logo</string>
     <string name="welcome_text">Welcome to MedicManage</string>
     <string name="login_button_text">LOGIN</string>
     <string name="new_user_prompt">New user? Sign up below</string>
     <string name="signup_button_text">Sign Up</string>
-
-
     //strings for signup
-    <string name ="signup">Sign Up </string>
-    <string name ="profile_details">Profile Details</string>
-    <string name ="user_type">User Type (Student/Nurse)</string>
-    <string name ="id_num">ID Number</string>
-    <string name ="first_name"> Name</string>
-    <string name ="last_name">Surname</string>
-    <string name ="username">Username</string>
+
+
+    <string name="signup">Sign Up </string>
+    <string name="profile_details">Profile Details</string>
+    <string name="user_type">User Type (Student/Nurse)</string>
+    <string name="id_num">ID Number</string>
+    <string name="first_name"> Name</string>
+    <string name="last_name">Surname</string>
+    <string name="username">Username</string>
     <string name="Password">Password</string>
-    <string name ="medicationReq">Medication Requirement</string>
-    <string name ="foodReq">Food Requirement</string>
-    <string name ="studentno">Student No</string>
+    <string name="medicationReq">Medication Requirement</string>
+    <string name="foodReq">Food Requirement</string>
+    <string name="studentno">Student No</string>
     <string name="staff_no">staff_no</string>
+
 
     //strings for general use
     <string name="logo">logo</string>
@@ -31,23 +30,20 @@
     <string name="remember_me">Remember me </string>
     <string name="forgot_password">Forgot Password</string>
     <string name="new_to_medicmanage">New to Medic Manage?</string>
-    <string name="CONFIRM">Confirm</string>
-    <string name="Cancel">Cancel</string>
+
+
 
     //Strings needed for basic communication with user
-    <string name = "application_name">MedicManage</string>
-    <string name = "hello_administrator">"Hello Administrator👋"</string>
-    <string name = "medication">Medications</string>
-    <string name = "add">Add</string>
-    <string name = "update">Update</string>
-    <string name = "delete">Delete</string>
-    <string name = "confirm_Message">Are you sure you want to add this medication?</string>
-    <string name = "changes">Are you happy with your changes?</string>
-    <string name = "delete_Message">Are you sure you want to delete this medication?</string>
-
-    <string name = "yes">Yes</string>
-    <string name = "no">No</string>
-
+    <string name="application_name">MedicManage</string>
+    <string name="hello_administrator">"Hello Administrator👋"</string>
+    <string name="add">Add</string>
+    <string name="update">Update</string>
+    <string name="delete">Delete</string>
+    <string name="changes">Are you happy with your changes?</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="CONFIRM">Confirm</string>
+    <string name="Cancel">Cancel</string>
     //Food List
     <string name="loading_food_list">Loading food list...</string>
     <string name="failure_to_load_food_list"> Failed to Load food list</string>
@@ -56,7 +52,7 @@
     <string name="selected_food_details">Selected Food Details</string>
     <string name="food_name">Name: </string>
     <string name="food_type">Type: </string>
-    <string name = "food">Food</string>
+    <string name="food">Food</string>
     <string name="available_quantity">Available Quantity</string>
     <string name="edit">edit</string>
     <string name="booklogo">Book Logo</string>
@@ -71,19 +67,33 @@
     <string name="update_profile">Update Profile Details\n</string>
     <string name="surname">Surname\n</string>
     <string name="employee_no">Employee No.</string>
-
-
     //fixing errors
     <string name="name">Name</string>
     <string name="text_name">Full Name</string>
     <string name="password">Password</string>
     <string name="sign_in">Sign In</string>
 
+
     //medications specific phrases
     <string name="med_brand">Brand</string>
-    <string name ="med_dose">Dosage</string>
-    <string name = "med_qoh">Quantity on Hand</string>
-    <string name = "medications">Medications</string>
-    <string name = "selection">Select Medication</string>
+    <string name="med_dose">Dosage</string>
+    <string name="med_qoh">Quantity on Hand</string>
+    <string name="med_med">Medications</string>
+
+    <string name="med_selection">Select Medication</string>
+    <string name="med_generic">Generic</string>
+    <string name="med_cancel">Cancel</string>
+    <string name="med_save">Save</string>
+    <string name="med_add">Add Medication</string>
+    <string name ="med_update">Update Medication</string>
+    <string name="med_dosage_example">Dosage e.g. 500mg</string>
+    <string name="med_delete_message">Are you sure you want to delete this medication?</string>
+    <string name ="med_update_message">Are you happy with your updates?</string>
+    <string name ="med_add_message">Are you sure you want to add this medication?</string>
+    <string name="med_dropdown_arrow">Medication dropdown arrow</string>
+    <string name="med_delete">Delete Medication</string>
+    <string name="book">Book Slot</string>
+    <string name="sess_avail_times">Available Times</string>
+    <string name="available_times">Available Times</string>
 
 </resources>
