--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -130,6 +130,12 @@
             <string name = "appointment_details">Appointments by Time</string>
         <string name="date_placeholder">Date</string>
         <string name="time_placeholder">Time</string>
+    <string name="not_available">Not Available</string>
+    <string name="student_number_label">Student Number</string>
+    <string name="medication_requirement_label">Medication</string>
+    <string name="appointment_date_label">Appointment Date</string>
+    <string name="review">Review Appointment</string>
+    <string name="no_appointments_found">No Appointments Found</string>
 
         <string name="home_tab">Home</string>
         <string name="schedule_tab">Schedule</string>
