--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -157,4 +157,7 @@
     <string name="appointment_cancelled_success">Your appointment has been successfully canceled.</string>
     <string name="no_appointment_scheduled">No Appointment Scheduled</string>
     <string name="cancel_appointment_button_text">Cancel Appointment</string>
+    <string name="Home">Home</string>
+    <string name="Schedule">Schedule</string>
+    <string name="Profile">Profile</string>
 </resources>
