--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,4 +160,5 @@
     <string name="Home">Home</string>
     <string name="Schedule">Schedule</string>
     <string name="Profile">Profile</string>
+    <string name="toggle_password_visibility">password_visibility</string>
 </resources>
