--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -112,12 +112,12 @@
 
 
     <string name="cancel_booking_title">Cancel Booking</string>
-    <string name="cancel_booking_message">Are you sure you want to cancel and go back?</string>
+    <string name="cancel_booking_message">Are you sure you want to delete this booking?</string>
     <string name="done">Done</string>
-    <string name="cancel_booking">Cancel Booking</string>
-    <string name="confirm_undo_booking_title">Cancel This Booking</string>
-    <string name="confirm_undo_booking_message">Are you sure you want to cancel the appointment you just made?</string>
-    <string name="booking_undone">Booking Canceled</string>
+    <string name="cancel_booking">Delete Booking</string>
+    <string name="confirm_undo_booking_title">Delete This Booking</string>
+    <string name="confirm_undo_booking_message">Are you sure you want to delete the appointment you just made?</string>
+    <string name="booking_undone">Booking Deleted</string>
     <string name="error_weekly_booking_limit">You can only have one booking per week</string>
     <string name="quit">Quit</string>
     <string name="quit_booking_title">Quit Booking</string>
@@ -151,12 +151,12 @@
     <string name="select_food_item">Select Food Item from List</string>
     <string name="select_appointment">Select Appointment from list</string>
     <string name="schedule_appointment">Schedule Appointment</string>
-    <string name="error_existing_booking"> <b>You already have an active booking.</b> Please cancel your current appointment to schedule a new one.</string>
-    <string name="cancel_appointment_title">Cancel Appointment</string>
-    <string name="cancel_appointment_message">Are you sure you want to permanently cancel this appointment?</string>
-    <string name="appointment_cancelled_success">Your appointment has been successfully canceled.</string>
+    <string name="error_existing_booking"> <b>You already have an active booking.</b> Please delete your current appointment to schedule a new one.</string>
+    <string name="cancel_appointment_title">Delete Appointment</string>
+    <string name="cancel_appointment_message">Are you sure you want to permanently delete this appointment?</string>
+    <string name="appointment_cancelled_success">Your appointment has been successfully deleted.</string>
     <string name="no_appointment_scheduled">No Appointment Scheduled</string>
-    <string name="cancel_appointment_button_text">Cancel Appointment</string>
+    <string name="cancel_appointment_button_text">Delete Appointment</string>
     <string name="Home">Home</string>
     <string name="Schedule">Schedule</string>
     <string name="Profile">Profile</string>
@@ -171,7 +171,13 @@
     <string name="view_appointments">View Appointments</string>
     <string name="review_appointment">Review Appointment</string>
     <string name="cancel_sign_up">Are you sure you want to go back to the main screen?</string>
+    <string name="decrease_quantity">Decrease Quantity</string>
+    <string name="increase_quantity">Increase Quantity\n</string>
     <string name="time_hh_mm">time_hh_mm</string>
     <string name="date_yyyy_mm_dd">date_yyyy_mm_dd</string>
+    <string name="edit_food_quantity">Edit Food Quantity</string>
+    <string name="zero">0</string>
+    <string name="food_qoh">Quantity on Hand</string>
+    <string name="food_update_quantity">Update Food Quantity</string>
 
 </resources>
