Cleaning up dialog code + password toggle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -75,8 +75,8 @@
     <string name="med_update">Update Medication</string>
     <string name="med_dosage_example">Dosage e.g. 500mg</string>
     <string name="med_delete_message">Are you sure you want to delete this medication?</string>
-    <string name="med_update_message">Are you happy with your updates?</string>
-    <string name="med_add_message">Are you sure you want to add this medication?</string>
+    <string name="med_update_message">The medication was successfully updated</string>
+    <string name="med_add_message">The medication was succesfully added</string>
     <string name="med_dropdown_arrow">Medication dropdown arrow</string>
     <string name="med_delete">Delete Medication</string>
     <string name="book">Book Slot</string>
@@ -187,6 +187,8 @@
     <string name="profile_update">Are you want to make changes to your profile ?</string>
     <string name="sign_out">Are you sure you want to sign out  ?</string>
     <string name="cancel_appointment_stu">Are you sure you want to cancel your appointment?</string>
+    <string name="confirm_add_med">Are you sure you want to add %1$s?</string>
+    <string name="confirm_update_med">Are you sure you want to update %1$s?</string>
 
 
 </resources>
