--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -189,6 +189,23 @@
     <string name="cancel_appointment_stu">Are you sure you want to cancel your appointment?</string>
     <string name="confirm_add_med">Are you sure you want to add %1$s?</string>
     <string name="confirm_update_med">Are you sure you want to update %1$s?</string>
+    <string name="quit_dialog">Are you sure you want to quit?</string>
+
+
+    <string-array name="illness_array">
+        <item>None</item>
+        <item>Asthma</item>
+        <item>Depression</item>
+        <item>Diabetes</item>
+        <item>High Cholesterol</item>
+        <item>Hypertension</item>
+        <item>Hypothyroidism</item>
+        <item>Anxiety</item>
+        <item>ADHD</item>
+        <item>Epilepsy</item>
+        <item>Migraines</item>
+    </string-array>
+
 
 
 </resources>
